create admin panel with list of users

--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -5,7 +5,7 @@
         if (role.Equals("Admin"))
         {
             <li class="nav-item">
-                <a class="nav-link text-danger" asp-controller="Admin" asp-action="Index">Settings</a>
+                <a class="nav-link text-danger" asp-controller="admin" asp-action="index">Admin Panel</a>
             </li>
         }
     }
