--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,6 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Admin Panel";
 }
-<h1>hello admin</h1>
+@model IEnumerable<User>
+
+<div class="card">
+    <div class="card-header">
+        <h5>Admin Panel</h5>
+        <a asp-controller = "admin" asp-action="adduser" class="btn btn-primary" role="button">Add user</a>
+    </div>
+    <div class="card-body">
+        <table class="table bg-dark" style="width: 100%;">
+            <thead class="text-left" style="display:table; width:100%; table-layout:fixed;">
+                <tr>
+                    <th class="p-0 ps-3" scope="col">Id</th>
+                    <th class="p-0 ps-3" scope="col">Name</th>
+                    <th class="p-0 ps-3" scope="col">Role</th>
+                    <th class="p-0 ps-3" scope="col"></th>
+                </tr>
+            </thead>
+            <tbody class="adminpaneltbody mt-3 border-secondary" style="display:block; overflow-y:auto; table-layout:fixed; border-width:1px 0px 0px 0px;">
+                @foreach (var user in Model)
+                {
+                    <tr class="mt-2" style="display: table; width: 100%; table-layout: fixed;">
+                        <td class="p-0 ps-3" scope="row">@user.Id</td>
+                        <td class="p-0 ps-3">
+                            <div>
+                                <p class="fw-bold mb-1">@user.Name</p>
+                                <p class="text-muted mb-0">Tracks: 0</p>
+                            </div>
+                        </td>
+                        <td class="p-0 ps-3">@user.Role.Name</td>
+                        <td class="p-0 ps-3" style="text-align:right;"><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id"><i class="fa-solid fa-pen-to-square"></i></a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
