--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using StockBand
 @using StockBand.ViewModel
 @using System.Security.Claims
+@using StockBand.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
