--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -3,25 +3,23 @@
     Layout = "_SimpleLayout";
 }
 @model UserLoginDto
-
 <div class="container mt-5">
     <div class="row">
-        <div class="col">
-            <div class="card card-login">
+        <div class="col"> 
+            <div class="card card-custom">
                 <div class="card-header text-center">
                     Sign in
                 </div>
                 <form method="post" asp-controller="account" asp-action="login">
                     <div class="card-body">
+                        <div class="validation text-danger" asp-validation-summary="All"></div>
                         <div class="form-group mt-1">
                             <label asp-for="Name"></label>
                             <input asp-for="Name" class="form-control">
-                            <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-group mt-3">
                             <label asp-for="Password"></label>
                             <input asp-for="Password" class="form-control" type="password">
-                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div class="form-check mt-3">
                             <input asp-for="RememberMe" type="checkbox" class="form-check-input" id="rememberme">
@@ -36,3 +34,9 @@
         </div>
     </div>
 </div>
+
+@section scripts{
+
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
