--- a/Views/Exceptions/BadRequest.cshtml
+++ b/Views/Exceptions/BadRequest.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "403 Forbidden";
+    ViewData["Title"] = "400 Bad Request";
     Layout = "_SimpleLayout";
 }
 <div class="container">
@@ -10,8 +10,8 @@
                     <h5>Server error</h5>
                 </div>
                 <div class="card-body mt-2">
-                    <h2 class="text-danger">403</h2> 
-                    <h6>You do not have permission to access this page.</h6>
+                    <h2 class="text-danger">400</h2> 
+                    <h6>Your request has caused an error.</h6>
                     <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
                 </div>
             </div>
