add unique links generator

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using StockBand.ViewModel
 @using System.Security.Claims
 @using StockBand.Models
+@using StockBand.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
