--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <h5>Admin Panel</h5>
-        <a asp-controller = "admin" asp-action="adduser" class="btn btn-primary" role="button">Add user</a>
+        <a asp-controller = "admin" asp-action="uniquelink" class="btn btn-primary" role="button">Get unique link</a>
     </div>
     <div class="card-body">
         <table class="table bg-dark" style="width: 100%;">
