--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -10,16 +10,16 @@
                 <div class="card-header text-center">
                     Sign in
                 </div>
-                <form method="post" asp-controller="account" asp-action="login">
-                    <div class="card-body">
+                <div class="card-body">
+                    <form method="post" asp-controller="account" asp-action="login">
                         <div class="validation text-danger" asp-validation-summary="All"></div>
                         <div class="form-group mt-1">
                             <label asp-for="Name"></label>
-                            <input asp-for="Name" class="form-control">
+                            <input asp-for="Name" type="text" class="form-control">
                         </div>
                         <div class="form-group mt-3">
                             <label asp-for="Password"></label>
-                            <input asp-for="Password" class="form-control" type="password">
+                            <input asp-for="Password" type="password" class="form-control">
                         </div>
                         <div class="form-check mt-3">
                             <input asp-for="RememberMe" type="checkbox" class="form-check-input" id="rememberme">
@@ -28,8 +28,8 @@
                         <div class="form-group mt-3 text-center">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
