--- a/Views/Exceptions/InternalServerError.cshtml
+++ b/Views/Exceptions/InternalServerError.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "500 Forbidden";
+    ViewData["Title"] = "500 Internal Server Error";
     Layout = "_SimpleLayout";
 }
 <div class="container">
@@ -11,7 +11,7 @@
                 </div>
                 <div class="card-body mt-2">
                     <h2 class="text-danger">500</h2> 
-                    <h6>Internal Server Error</h6>
+                    <h6>Internal Server Error.</h6>
                 </div>
             </div>
         </div>
