--- a/Views/Shared/_SessionStatusPartial.cshtml
+++ b/Views/Shared/_SessionStatusPartial.cshtml
@@ -1,3 +1,20 @@
-﻿<form method="post" class="form-inline" asp-controller="account" asp-action="logout">
+﻿@*<form method="post" class="form-inline" asp-controller="account" asp-action="logout">
     <button type="submit" class="btn btn-light">Logout</button>
-</form>
+</form>*@
+<div class="dropdown">
+	<button class="btn btn-link text-white dropdown-toggle p-0" style="text-decoration: none;" type="button" id="dropdownMenuUserPanel" data-bs-toggle="dropdown" aria-expanded="false">
+	@User.Identity.Name
+	</button>
+	<ul class="dropdown-menu" aria-labelledby="dropdownMenuUserPanel">
+		<li><a class="dropdown-item" href="#">Profile</a></li>
+		<li><a class="dropdown-item" href="#">Activity</a></li>
+		<div class="dropdown-divider"></div>
+		<li>
+			<div class="dropdown-item">
+				<form method="post" class="form-inline" asp-controller="account" asp-action="logout">
+					<button type="submit" class="btn btn-link text-warning p-0" style="text-decoration: none;">Log out</button>
+				</form>
+			</div>
+		</li>
+	</ul>
+</div>
