Change password for user

--- a/Views/Admin/EditUser.cshtml
+++ b/Views/Admin/EditUser.cshtml
@@ -1,6 +1,7 @@
 ﻿@model EditUserDto
 @{
     ViewData["Title"] = "Edit " + Model.Name;
+    Layout = "_Layout";
 }
 <div class="container mt-5">
     <div class="row">
