--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <partial name="_AdminNavItemsPartial"/>
                     </ul>
                     <div class="mr-2">
-                        <partial name="_SessionStatusPartial"/>
+                        <partial name="_ProfilePartial"/>
                     </div>
                 </div>
             </div>
