--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using System.Security.Claims
 @using StockBand.Models
 @using StockBand.Services
+@using StockBand.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
