--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -32,8 +32,7 @@
                         </td>
                         <td class="p-0 ps-3">
                             <div>
-                                <p class="fw-bold mb-1">@user.Role.Name</p>
-                                <p class="text-muted mb-0">RoleId: @user.Role.Id</p>
+                                <p class="fw-bold mb-1">@user.Role</p>
                             </div>
                         </td>
                         <td class="p-0 ps-3" style="text-align:right;"><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id"><i class="fa-solid fa-pen-to-square"></i></a></td>
