--- a/Views/Exceptions/Forbidden.cshtml
+++ b/Views/Exceptions/Forbidden.cshtml
@@ -11,7 +11,7 @@
                 </div>
                 <div class="card-body mt-2">
                     <h2 class="text-danger">403</h2> 
-                    <h6>You do not have permission to access this page.</h6>
+                    <h6>@Message.Code16</h6>
                     <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
                 </div>
             </div>
