--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -3,7 +3,7 @@
 	<button class="btn btn-link text-white dropdown-toggle p-0" style="text-decoration: none;" type="button" id="dropdownMenuUserPanel" data-bs-toggle="dropdown" aria-expanded="false">
 	@User.Identity.Name
 	</button>
-	<ul class="dropdown-menu" aria-labelledby="dropdownMenuUserPanel">
+	<ul class="dropdown-menu dropdown-custom" aria-labelledby="dropdownMenuUserPanel">
 		<li><a class="dropdown-item" asp-controller="account" asp-action="changepassword">Change password</a></li>
 		<li><a class="dropdown-item" href="#">Activity</a></li>
 		<div class="dropdown-divider"></div>
