--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -5,7 +5,7 @@
 	</button>
 	<ul class="dropdown-menu dropdownCustom" aria-labelledby="dropdownMenuUserPanel">
 		<li><a class="dropdown-item" asp-controller="account" asp-action="changepassword">Change password</a></li>
-		<li><a class="dropdown-item" href="#">Activity</a></li>
+		<li><a class="dropdown-item" asp-controller="account" asp-action="activity" asp-route-id="@int.Parse(User.FindFirst(x => x.Type == ClaimTypes.NameIdentifier).Value)">Activity</a></li>
 		<div class="dropdown-divider"></div>
 		<li>
 			<div class="dropdown-item">
