--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -5,8 +5,8 @@
 	</button>
 	<ul class="dropdown-menu dropdownCustom" aria-labelledby="dropdownMenuUserPanel">
 		<li><a class="dropdown-item" asp-controller="account" asp-action="changepassword">Change password</a></li>
-		<li><a class="dropdown-item" asp-controller="account" asp-action="activity" asp-route-id="@int.Parse(User.FindFirst(x => x.Type == ClaimTypes.NameIdentifier).Value)">Activity</a></li>
-		<div class="dropdown-divider"></div>
+		<li><a class="dropdown-item" asp-controller="account" asp-action="userlog">Logs</a></li>
+
 		<li>
 			<div class="dropdown-item">
 				<form method="post" class="form-inline" asp-controller="account" asp-action="logout">
