--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -38,7 +38,6 @@ body {
         width: 19rem;
     }
     .adminpaneltbody {
-        max-height: 50vh;
         font-size: 10px;
     }
     .table-role {
@@ -50,7 +49,6 @@ body {
         width: 19rem;
     }
     .adminpaneltbody {
-        max-height: 50vh;
         font-size: 10px;
     }
     .table-role {
@@ -65,15 +63,54 @@ body {
     .card-custom {
         width: 30rem;
     }
-    .adminpaneltbody {
-        max-height: 40vh;
-    }
     .dropdownCustom {
         right: 0 !important;
         left: auto !important;
     }
-
 }
+@media only screen and (min-height:300px) and (max-height:400px) {
+
+    .adminpaneltbody {
+        min-height: 6vh;
+        max-height: 6vh;
+    }
+}
+@media only screen and (min-height:400px) and (max-height:500px) {
+
+    .adminpaneltbody {
+        min-height: 10vh;
+        max-height: 10vh;
+    }
+}
+@media only screen and (min-height:500px) and (max-height:600px) {
+
+    .adminpaneltbody {
+        min-height: 22vh;
+        max-height: 22vh;
+    }
+}
+@media only screen and (min-height:600px) and (max-height:700px) {
+
+    .adminpaneltbody {
+        min-height: 35vh;
+        max-height: 35vh;
+    }
+}
+@media only screen and (min-height:700px) and (max-height:800px) {
+
+    .adminpaneltbody {
+        min-height: 45vh;
+        max-height: 45vh;
+    }
+}
+@media only screen and (min-height:800px) {
+
+    .adminpaneltbody {
+        min-height: 50vh;
+        max-height: 50vh;
+    }
+}
+
 .card-custom {
     margin-left: auto;
     margin-right: auto;
@@ -116,3 +153,10 @@ body {
 .thead-borderless > tr > th{
     border:none;
 }
+
+/*@media only screen and (min-height:400px) and (max-height:600px) {
+
+    .card-body {
+        height: 20vh !important;
+    }
+}*/
