--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -7,7 +7,13 @@
 <div class="card">
     <div class="card-header">
         <h5>Admin Panel</h5>
-        <a asp-controller = "admin" asp-action="uniquelink" class="btn btn-primary" role="button">Get unique link</a>
+        @*<a asp-controller = "admin" asp-action="uniquelink" class="btn btn-primary" role="button">Get unique link</a>*@
+        <div class="btn-toolbar mb-3" role="toolbar">
+            <div class="btn-group mr-2" role="group">
+                <a asp-controller = "admin" asp-action="uniquelink" class="btn btn-primary" role="button">Unique</a>
+                <a asp-controller = "admin" asp-action="logs" class="btn btn-primary" role="button">Logs</a>
+            </div>
+        </div>
     </div>
     <div class="card-body">
         <table class="table bg-dark" style="width: 100%;">
