--- a/Views/Exceptions/Forbidden.cshtml
+++ b/Views/Exceptions/Forbidden.cshtml
@@ -2,18 +2,16 @@
     ViewData["Title"] = "403 Forbidden";
     Layout = "_SimpleLayout";
 }
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="card mt-5 card-forbidden">
-                <div class="card-header">
-                    <h5>Server error</h5>
-                </div>
-                <div class="card-body mt-2">
-                    <h2 class="text-danger">403</h2> 
-                    <h6>@Message.Code16</h6>
-                    <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
-                </div>
+<div class="row mt-5">
+    <div class="col">
+        <div class="card mt-5 card-forbidden">
+            <div class="card-header">
+                <h5>Server error</h5>
+            </div>
+            <div class="card-body mt-2">
+                <h2 class="text-danger">403</h2> 
+                <h6>@Message.Code16</h6>
+                <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
             </div>
         </div>
     </div>
