--- a/Views/Account/ChangePassword.cshtml
+++ b/Views/Account/ChangePassword.cshtml
@@ -4,33 +4,31 @@
     Layout = "_Layout";
 }
 @model ProfileEditUser
-<div class="container mt-5">
-    <div class="row">
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-header">
-                    <h5>Change password</h5>
-                </div>
-                <div class="card-body">
-                    <form method="post" asp-controller="account" asp-action="changepassword">
-                        <div class="validation text-danger" asp-validation-summary="All"></div>
-                        <div class="form-group mt-1">
-                            <label>Old password</label>
-                            <input asp-for="OldPassword" type="password" class="form-control" placeholder="Old password">
-                        </div>
-                        <div class="form-group mt-1">
-                            <label>New password</label>
-                            <input asp-for="NewPassword" type="password" class="form-control" placeholder="New password">
-                        </div>
-                        <div class="form-group mt-1">
-                            <label>Confirm new password</label>
-                            <input asp-for="ConfirmNewPassword" type="password" class="form-control" placeholder="Confirm new password">
-                        </div>
-                        <div class="form-group mt-3 text-center">
-                            <button type="submit" class="btn btn-warning">Submit</button>
-                        </div>
-                    </form>
-                </div>
+<div class="row mt-5">
+    <div class="col">
+        <div class="card card-custom">
+            <div class="card-header">
+                <h5>Change password</h5>
+            </div>
+            <div class="card-body">
+                <form method="post" asp-controller="account" asp-action="changepassword">
+                    <div class="validation text-danger" asp-validation-summary="All"></div>
+                    <div class="form-group mt-1">
+                        <label>Old password</label>
+                        <input asp-for="OldPassword" type="password" class="form-control" placeholder="Old password">
+                    </div>
+                    <div class="form-group mt-1">
+                        <label>New password</label>
+                        <input asp-for="NewPassword" type="password" class="form-control" placeholder="New password">
+                    </div>
+                    <div class="form-group mt-1">
+                        <label>Confirm new password</label>
+                        <input asp-for="ConfirmNewPassword" type="password" class="form-control" placeholder="Confirm new password">
+                    </div>
+                    <div class="form-group mt-3 text-center">
+                        <button type="submit" class="btn btn-warning">Submit</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
