--- a/Views/Account/Create.cshtml
+++ b/Views/Account/Create.cshtml
@@ -4,33 +4,31 @@
 }
 @model CreateUserDto
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col">
-            <div class="card card-custom">
-                <div class="card-header text-center">
-                    Create account
-                </div>
-                <div class="card-body">
-                    <form method="post" asp-controller="account" asp-action="create">
-                        <div class="validation text-danger" asp-validation-summary="All"></div>
-                        <div class="form-group mt-1">
-                            <label asp-for="Name"></label>
-                            <input asp-for="Name" type="text" class="form-control">
-                        </div>
-                        <div class="form-group mt-3">
-                            <label asp-for="Password"></label>
-                            <input asp-for="Password" type="password" class="form-control">
-                        </div>
-                        <div class="form-group mt-3">
-                            <label asp-for="ConfirmPassword"></label>
-                            <input asp-for="ConfirmPassword" type="password" class="form-control">
-                        </div>
-                        <div class="form-group mt-3 text-center">
-                            <button type="submit" class="btn btn-success">Submit</button>
-                        </div>
-                    </form>
-                </div>
+<div class="row mt-5">
+    <div class="col">
+        <div class="card card-custom">
+            <div class="card-header text-center">
+                Create account
+            </div>
+            <div class="card-body">
+                <form method="post" asp-controller="account" asp-action="create">
+                    <div class="validation text-danger" asp-validation-summary="All"></div>
+                    <div class="form-group mt-1">
+                        <label asp-for="Name"></label>
+                        <input asp-for="Name" type="text" class="form-control">
+                    </div>
+                    <div class="form-group mt-3">
+                        <label asp-for="Password"></label>
+                        <input asp-for="Password" type="password" class="form-control">
+                    </div>
+                    <div class="form-group mt-3">
+                        <label asp-for="ConfirmPassword"></label>
+                        <input asp-for="ConfirmPassword" type="password" class="form-control">
+                    </div>
+                    <div class="form-group mt-3 text-center">
+                        <button type="submit" class="btn btn-success">Submit</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
