--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -4,47 +4,44 @@
 }
 @model IEnumerable<User>
 
-<div class="card">
-    <div class="card-header">
-        <h5>Admin Panel</h5>
-        @*<a asp-controller = "admin" asp-action="uniquelink" class="btn btn-primary" role="button">Get unique link</a>*@
-        <div class="btn-toolbar mb-3" role="toolbar">
-            <div class="btn-group mr-2" role="group">
-                <a asp-controller = "admin" asp-action="uniquelink" class="btn btn-primary" role="button">Unique</a>
-                <a asp-controller = "admin" asp-action="logs" class="btn btn-primary" role="button">Logs</a>
+<div class="container scrollable">
+@foreach(var user in Model)
+{
+    <div class="row mt-1 border pt-2 pb-1">
+        <div class="row mt-1">
+            <div class="col-6"><b>@user.Name</b></div>
+            <div class="col-6 text-end">
+                <small>
+                    <i class="bi bi-exclamation-circle"></i> Block status: 
+                    </small><strong class="text-warning">@user.Block</strong>
+            </div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-6 text-muted">
+                <small>Role: </small><strong>@user.Role</strong>
             </div>
         </div>
     </div>
-    <div class="card-body">
-        <table class="table bg-dark" style="width: 100%;">
-            <thead class="text-left thead-borderless" style="display:table; width:100%; table-layout:fixed;">
-                <tr class="text-light">
-                    <th class="p-0 ps-3" style="width: 12% !important;" scope="col">Id</th>
-                    <th class="p-0 ps-3 table-role" style="width: 45% !important;" scope="col">Name</th>
-                    <th class="p-0 ps-3" scope="col">Role</th>
-                    <th class="p-0 ps-3" scope="col"></th>
-                </tr>
-            </thead>
-            <tbody class="adminpaneltbody mt-3 border-secondary" style="display:block; overflow-y:auto; table-layout:fixed; border-width:1px 0px 0px 0px;">
-                @foreach (var user in Model)
-                {
-                    <tr class="mt-1" style="display: table; width: 100%; table-layout: fixed; ">
-                        <td class="p-0 ps-3" style="width: 12% !important;" scope="row">@user.Id</td>
-                        <td class="p-0 ps-3 table-role" style="width: 45% !important;">
-                            <div>
-                                <p class="fw-bold mb-1">@user.Name</p>
-                                <p class="text-muted mb-0">Block: @user.Block</p>
-                            </div>
-                        </td>
-                        <td class="p-0 ps-3">
-                            <div>
-                                <p class="fw-bold mb-1">@user.Role</p>
-                            </div>
-                        </td>
-                        <td class="p-0 ps-3" style="text-align:right;"><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id"><i class="fa-solid fa-pen-to-square"></i></a></td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+    <div class="row border border-top-0 bg-secondary">
+        <div class="row mt-2 pb-2 pt-4">
+            <div class="col-8 col-md-11">
+                <small><i class="bi bi-calendar-date"></i> @user.CreatedTime.ToString("D")</small>
+            </div>
+            <div class="col-4 col-md-1 text-end">
+                <div class="row">
+                    <div class="col-6">
+                        <a href="#" class="pt-0 pb-0 btn btn-warning btn-sm">Edit</a>
+                    </div>
+                    <div class="col-6">
+                        <a href="#" class="pt-0 pb-0 btn btn-danger btn-sm">Delete</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
+}
 </div>
+
+
+
