--- a/Views/Exceptions/CustomException.cshtml
+++ b/Views/Exceptions/CustomException.cshtml
@@ -2,21 +2,21 @@
     ViewData["Title"] = "Exception";
     Layout = "_SimpleLayout";
 }
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="card mt-5 card-forbidden">
-                <div class="card-header">
-                    <h5>Server error</h5>
-                </div>
-                <div class="card-body mt-2">
-                    <h6>@TempData["Message"]</h6>
-                    <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
-                </div>
+
+<div class="row mt-5">
+    <div class="col">
+        <div class="card mt-5 card-forbidden">
+            <div class="card-header">
+                <h5>Server error</h5>
+            </div>
+            <div class="card-body mt-2">
+                <h6>@TempData["Message"]</h6>
+                <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
             </div>
         </div>
     </div>
 </div>
+
 
 @section scripts{
 
