--- a/Views/Exceptions/InternalServerError.cshtml
+++ b/Views/Exceptions/InternalServerError.cshtml
@@ -2,17 +2,16 @@
     ViewData["Title"] = "500 Internal Server Error";
     Layout = "_SimpleLayout";
 }
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="card mt-5 card-forbidden">
-                <div class="card-header">
-                    <h5>Server error</h5>
-                </div>
-                <div class="card-body mt-2">
-                    <h2 class="text-danger">500</h2> 
-                    <h6>Internal Server Error.</h6>
-                </div>
+
+<div class="row mt-5">
+    <div class="col">
+        <div class="card mt-5 card-forbidden">
+            <div class="card-header">
+                <h5>Server error</h5>
+            </div>
+            <div class="card-body mt-2">
+                <h2 class="text-danger">500</h2> 
+                <h6>Internal Server Error.</h6>
             </div>
         </div>
     </div>
