--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,166 +1,8 @@
-﻿html {
-  font-size: 14px;
+﻿body {
+    overflow: hidden;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.scrollable {
+    height: 85vh;
+    overflow-y: auto;
 }
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-   margin-bottom: 60px;
-   overflow: hidden; /* Hide scrollbars */
-}
-@media only screen and (min-width: 0px) and (max-width:320px) {
-    .card-custom {
-        width: 15rem;
-    }
-    .adminpaneltbody {
-        max-height: 45vh;
-        font-size:8px;
-    }
-    table th{
-        font-size:10px;
-    }
-    .table-role{
-
-    }
-}
-
-@media only screen and (min-width: 320px) and (max-width:700px) {
-    .card-custom {
-        width: 19rem;
-    }
-    .adminpaneltbody {
-        font-size: 10px;
-    }
-    .table-role {
-        width: 20%;
-    }
-}
-@media only screen and (min-width:700px) and (max-width:900px){
-    .card-custom {
-        width: 19rem;
-    }
-    .adminpaneltbody {
-        font-size: 10px;
-    }
-    .table-role {
-        width: 20%;
-    }
-    .dropdownCustom {
-        right: 0 !important;
-        left: auto !important;
-    }
-}
-@media only screen and (min-width: 900px) {
-    .card-custom {
-        width: 30rem;
-    }
-    .dropdownCustom {
-        right: 0 !important;
-        left: auto !important;
-    }
-}
-@media only screen and (min-height:300px) and (max-height:400px) {
-
-    .adminpaneltbody {
-        min-height: 6vh;
-        max-height: 6vh;
-    }
-}
-@media only screen and (min-height:400px) and (max-height:500px) {
-
-    .adminpaneltbody {
-        min-height: 10vh;
-        max-height: 10vh;
-    }
-}
-@media only screen and (min-height:500px) and (max-height:600px) {
-
-    .adminpaneltbody {
-        min-height: 22vh;
-        max-height: 22vh;
-    }
-}
-@media only screen and (min-height:600px) and (max-height:700px) {
-
-    .adminpaneltbody {
-        min-height: 35vh;
-        max-height: 35vh;
-    }
-}
-@media only screen and (min-height:700px) and (max-height:800px) {
-
-    .adminpaneltbody {
-        min-height: 45vh;
-        max-height: 45vh;
-    }
-}
-@media only screen and (min-height:800px) {
-
-    .adminpaneltbody {
-        min-height: 50vh;
-        max-height: 50vh;
-    }
-}
-
-.card-custom {
-    margin-left: auto;
-    margin-right: auto;
-    animation-duration: 1s;
-    animation-name: slideIn;
-}
-.card-forbidden {
-    animation-duration: 1s;
-    animation-name: fadeIn;
-}
-
-@keyframes slideIn {
-    from{
-        transform:translateY(10px);
-    }
-    to {
-        transform: translateY(0);
-    }
-}
-@keyframes fadeIn {
-    from {
-        opacity:0.5;
-    }
-
-    to {
-        opacity:1;
-    }
-}
-.bg-image {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    background-repeat: no-repeat;
-    background-size:cover;
-}
-.thead-borderless > tr > th{
-    border:none;
-}
-
-/*@media only screen and (min-height:400px) and (max-height:600px) {
-
-    .card-body {
-        height: 20vh !important;
-    }
-}*/
-.btn-toolbar {
-    text-align: center;
-}
-​
