--- a/Views/Account/UserLog.cshtml
+++ b/Views/Account/UserLog.cshtml
@@ -5,7 +5,46 @@
 
 
 @model PaginetedList<UserLog>
-<div class="card">
+
+ <div class="row">
+    <div class="col-12">
+        <nav class="nav justify-content-start">
+            <ul class="pagination">
+                <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="account" asp-action="userlog" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
+                @foreach (var item in Model.Pages(1))
+                {
+                    <li class="page-item @Model.ActivePage(item)"><a class="page-link " asp-controller="account" asp-action="userlog" asp-route-pageNumber="@item">@item</a></li>
+                }
+                <li class="page-item @Model.NextDisabled()"><a class="page-link" asp-controller="account" asp-action="userlog" asp-route-pageNumber="@(Model.PageIndex+1)">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+
+<div class="table-responsive scrollable">
+    <table class="table text-nowrap">
+    <thead>
+        <tr>
+        <th scope="col">Guid</th>
+        <th scope="col">Date</th>
+        <th scope="col">Action</th>
+        </tr>
+    </thead>
+    <tbody>
+    @foreach (var log in Model)
+    {
+        <tr>
+            <th class="text-warning" scope="row">@log.Guid</th>
+            <td class="text-warning">@log.CreatedDate.ToString("F")</td>
+            <td class="text-info">@log.Action</td>
+        </tr>
+    }
+    </tbody>
+    </table>
+</div>
+
+
+@*<div class="card">
     <div class="card-header">
         <h5>Logs</h5>
     </div>
@@ -43,4 +82,4 @@
         </nav>
     </div>
 </div>
-
+*@
