--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
     if (User.Identity.IsAuthenticated && User.IsInRole(UserRoles.Roles[1]))
     {
-        <li class="nav-item">
-            <a class="nav-link text-danger" asp-controller="admin" asp-action="index">Admin Panel</a>
-        </li>
+        <div class="dropdown">
+			<button class="btn btn-link text-danger dropdown-toggle p-0" style="text-decoration: none;" type="button" id="dropdownMenuUserPanel" data-bs-toggle="dropdown" aria-expanded="false">
+			Admin
+			</button>
+			<ul class="dropdown-menu" aria-labelledby="dropdownMenuUserPanel">
+				<li><a class="dropdown-item" asp-controller="admin" asp-action="userspanel">User panel</a></li>
+				<li><a class="dropdown-item" asp-controller="admin" asp-action="logs">All logs</a></li>
+				<li><a class="dropdown-item" asp-controller="admin" asp-action="uniquelink">Unique link</a></li>
+			</ul>
+		</div>
     }
 }
