--- a/Views/Account/ChangePassword.cshtml
+++ b/Views/Account/ChangePassword.cshtml
@@ -4,9 +4,10 @@
     Layout = "_Layout";
 }
 @model ProfileEditUser
-<div class="row mt-5">
-    <div class="col">
-        <div class="card card-custom">
+
+<div class="row" style="margin-top:10vh;">
+    <div class="d-flex justify-content-center">
+        <div class="card" style="width:50vh;">
             <div class="card-header">
                 <h5>Change password</h5>
             </div>
@@ -28,8 +29,14 @@
                     <div class="form-group mt-3 text-center">
                         <button type="submit" class="btn btn-warning">Submit</button>
                     </div>
-                </form>
+                 </form>
             </div>
         </div>
     </div>
 </div>
+
+@section scripts{
+
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
