--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -3,7 +3,40 @@
     Layout = "_SimpleLayout";
 }
 @model UserLoginDto
-<div class="row mt-5">
+
+<div class="row" style="margin-top:10vh;">
+    <div class="d-flex justify-content-center">
+        <div class="card" style="width:50vh;">
+            <div class="card-header">
+                <h5>Login in</h5>
+            </div>
+            <div class="card-body">
+                <form method="post" asp-controller="account" asp-action="login">
+                    <div class="validation text-danger" asp-validation-summary="All"></div>
+                    <div class="form-group mt-1">
+                        <label asp-for="Name"></label>
+                        <input asp-for="Name" type="text" class="form-control">
+                    </div>
+                    <div class="form-group mt-3">
+                        <label asp-for="Password"></label>
+                        <input asp-for="Password" type="password" class="form-control">
+                    </div>
+                    <div class="form-check mt-3">
+                        <input asp-for="RememberMe" type="checkbox" class="form-check-input" id="rememberme">
+                        <label class="form-check-label" for="rememberme">Remember me</label>
+                    </div>
+                    <div class="form-group mt-3 text-center">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+@*<div class="row mt-5">
     <div class="col"> 
         <div class="card card-custom">
             <div class="card-header text-center">
@@ -31,7 +64,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 @section scripts{
 
