--- a/Views/Admin/Logs.cshtml
+++ b/Views/Admin/Logs.cshtml
@@ -5,38 +5,9 @@
 
 @model PaginetedList<UserLog>
 
-
-
-
-<div class="card">
-    <div class="card-header">
-        <h5>All logs</h5>
-    </div>
-    <div class="card-body">
-        <table class="table bg-dark" style="width: 100%;">
-            <thead class="text-left thead-borderless" style="display:table; width:100%; table-layout:fixed;">
-                <tr class="text-light">
-                    <th class="p-0 ps-3" style="width: 25% !important;" scope="col">Guid</th>
-                    <th class="p-0 ps-3" style="width: 25% !important;" scope="col">User</th>
-                    <th class="p-0 ps-3" style="width: 25% !important;" scope="col">Action</th>
-                    <th class="p-0 ps-3" style="width: 25% !important;" scope="col">Date</th>
-                </tr>
-            </thead>
-            <tbody class="adminpaneltbody mt-3 border-secondary" style="display:block; overflow-y:auto; table-layout:fixed; border-width:1px 0px 0px 0px;">
-               @foreach (var item in Model)
-               {
-                    <tr class="mt-1" style="display: table; width: 100%; table-layout: fixed;">
-                        <td class="p-0 ps-3 text-warning" style="width: 25% !important;" scope="row">@item.Guid</td>
-                        <td class="p-0 ps-3" style="width: 25% !important;" scope="row">@item.User.Name</td>
-                        <td class="p-0 ps-3" style="width: 25% !important;" scope="row">@item.Action</td>
-                        <td class="p-0 ps-3" style="width: 25% !important;" scope="row">@item.CreatedDate.ToString("dd/MM/yy-HH:mm")</td>
-                    </tr>
-               }
-            </tbody>
-        </table>
-    </div>
-    <div class="card-footer">
-        <nav class="nav justify-content-center">
+ <div class="row">
+    <div class="col-12">
+        <nav class="nav justify-content-start">
             <ul class="pagination">
                 <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="admin" asp-action="logs" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
                 @foreach (var item in Model.Pages(1))
@@ -47,4 +18,28 @@
             </ul>
         </nav>
     </div>
+</div>
+
+<div class="table-responsive scrollable">
+    <table class="table text-nowrap">
+    <thead>
+        <tr>
+        <th scope="col">Guid</th>
+        <th scope="col">Username</th>
+        <th scope="col">Date</th>
+        <th scope="col">Action</th>
+        </tr>
+    </thead>
+    <tbody>
+    @foreach (var log in Model)
+    {
+        <tr>
+            <th class="text-warning" scope="row">@log.Guid</th>
+            <td class="text-info" >@log.User.Name</td>
+            <td class="text-warning">@log.CreatedDate.ToString("F")</td>
+            <td class="text-info">@log.Action</td>
+        </tr>
+    }
+    </tbody>
+    </table>
 </div>
