--- a/Views/Admin/UniqueLink.cshtml
+++ b/Views/Admin/UniqueLink.cshtml
@@ -6,24 +6,24 @@
     var url = Url.Action("create", "account", new {guid = UniqueLinkService.AddLink()},Context.Request.Scheme);
 }
 
-<div class="row mt-5">
-    <div class="col">
-        <div class="card card-custom">
+<div class="row" style="margin-top:10vh;">
+    <div class="d-flex justify-content-center">
+        <div class="card" style="width:50vh;">
             <div class="card-header">
-                <h5>Unique Link:</h5>
+                <h5>Edit user</h5>
             </div>
             <div class="card-body">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                     <button class="btn btn-outline-secondary" onclick="myFunction()" type="button">Copy</button>
                     </div>
-                    <input type="text" class="form-control" id="copyFuncion" readonly="readonly" value="@url">
+                    <input type="text" class="form-control w-25" id="copyFuncion" readonly="readonly" value="@url">
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+@*//TODO nie dziala skrypt js*@
 <script>
     const text = document.getElementById("copyFuncion");
     text.select();
